Отрисуй меня полностью

--- a/index.html
+++ b/index.html
@@ -233,5 +233,8 @@
   </template>
   <script src="js/functions.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script type="module" src="js/picture-render.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
