--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </section>
   </template>
 
-  <!-- Экран загрузки изображения -->
+  <!--- Экран загрузки изображения --->
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
