--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off">
+          <form class="img-upload__form" 
+              id="upload-select-image" 
+              method="POST" 
+              action="https://29.javascript.htmlacademy.pro/kekstagram" 
+              enctype="multipart/form-data" 
+              autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -231,9 +236,7 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script src="js/functions.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/functions.js"></script>
+  <script type="module" src="js/form-handler.js"></script>
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
