--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script type="module" src="js/form-handler.js"></script>
+  <script src="./pristine/pristine.min.js"></script>
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
