--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script src="./pristine/pristine.min.js"></script>
-  <script type="module" src="js/main.js"></script>
+  <script src="./pristine/pristine.min.js" defer></script>
+  <script type="module" src="js/main.js" defer></script>
 </body>
 </html>
